force-app/main/default/objects/NewsApis_Setting__mdt/NewsApis_Setting__mdt.object-meta.xml
<CustomObject>
    <label>News Api setting</label>
    <pluralLabel>News Api settings</pluralLabel>
</CustomObject>