force-app/main/default/objects/NewsApis_Setting__mdt/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <length>60</length>
    <type>Text</type>
</CustomField>