force-app/main/default/objects/NewsApis_Setting__mdt/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>