force-app/main/default/objects/NewsApis_Setting__mdt/fields/endpointType__c.field-meta.xml
<CustomField>
    <fullName>endpointType__c</fullName>
    <label>endpointType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>